# weather_automation

./: .gitignore  README.md  main.py  pyproject.toml  settings.json  weather_data.csv  weather_logger.py
.github/workflows/: main.yml
.streamlit/: secrets.toml
