[tool.poetry]
name = "weather-automation"
version = "0.1.0"
description = "Weather data collection project"
authors = ["Erez Grinberg <erezgrn3112@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
streamlit = "^1.30.0"
pandas = "^2.1.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"